--- a/asets/css/common.css
+++ b/asets/css/common.css
@@ -301,6 +301,60 @@ body.appear #body-container {
     width: 50%;
   }
 }
+/*======  縦線が動いてスクロールを促す =======*/
+
+/*スクロールダウン全体の場所*/
+.scrolldown1{
+    /*描画位置※位置は適宜調整*/
+	position:absolute;
+	right:15%;
+  bottom:160px;
+    /*全体の高さ*/
+	height:50px;
+}
+
+/*Scrollテキストの描写*/
+.scrolldown1 span{
+    /*描画位置*/
+	position: absolute;
+	left:-20px;
+	top: -30px;
+    /*テキストの形状*/
+	color: #eee;
+	letter-spacing: 0.05em;
+}
+
+/* 線の描写 */
+.scrolldown1::after{
+	content: "";
+    /*描画位置*/
+	position: absolute;
+	top: 0;
+    /*線の形状*/
+	width: 1px;
+	height: 30px;
+	background: #eee;
+    /*線の動き1.8秒かけて動く。永遠にループ*/
+	animation: pathmove 1.8s ease-in-out infinite;
+}
+
+/*高さ・位置・透過が変化して線が上から下に動く*/
+@keyframes pathmove{
+	0%{
+		height:0;
+		top:0;
+		opacity: 0;
+	}
+	30%{
+		height:30px;
+		opacity: 1;
+	}
+	100%{
+		height:0;
+		top:50px;
+		opacity: 0;
+	}
+}
 /*footer*/
 .footer {
   padding: 35px 0;
